# stb

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  SprintToolBox.ini  SprintToolBox.ini-example  auto-update-sprint.sh  build.bat  build.sh  com.sprinttoolbox.plist  current-sprint.json  deploy-sprint-function.sh  install_mac.sh  installer.nsi  package_linux.sh  package_mac.sh  package_win.bat  package_win.sh  remove_autostart_win.vbs  setup_autostart_win.vbs
.claude/: settings.local.json
.github/workflows/: build.yml
functions/update-sprint/: go.mod  go.sum  main.go
include/: Config.h  ConverterDialog.h  JiraService.h  MainFrame.h  SprintToolBoxApp.h  TimeConverterDialog.h  TimestampUtils.h  TrayIconApp.h
src/: Config.cpp  ConverterDialog.cpp  JiraService.cpp  MainFrame.cpp  SprintToolBoxApp.cpp  TimeConverterDialog.cpp  TimestampUtils.cpp  TrayIconApp.cpp  main.cpp
tests/: CMakeLists.txt  test_sprint.cpp  test_timestamp.cpp
